<resources>

    <string name="app_name">Storm Counter</string>

    <string name="button_reset">Reset</string>

    <!-- Storm Counter -->
    <string name="blue_mana_text">Blue Mana: </string>
    <string name="red_mana_text">Red Mana: </string>
    <string name="storm_count_text">Storm Count: </string>
    <string name="button_increment_red">+1 Red</string>
    <string name="button_increment_blue">+1 Blue</string>
    <string name="button_decrement_red">-1 Red</string>
    <string name="button_decrement_blue">-1 Blue</string>
    <string name="button_increment_storm">+1 Storm</string>
    <string name="init_zero">0</string>

    <!-- Landing Screen -->
    <string name="landing_screen_title">Life Counter</string>
    <string name="button_launch_life_counter">Life Counter</string>
    <string name="button_launch_storm_counter">Storm Counter</string>


    <!-- Life Counter -->
    <string name="life_counter_title">Life Counter</string>
    <string name="life_counter_text">Life Total: </string>
    <string name="life_counter_opponent_text">Opponent Life Total: </string>
    <string name="button_increment_life_total">+1 Life</string>
    <string name="button_decrement_life_total">-1 Life</string>
    <string name="title_activity_counter">Counter</string>

</resources>
